--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -1,20 +1,3 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    text-decoration: none;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    background-color: #000;
-}
-
-
 /* Barra de navegación. */
 nav.mainNav {
     width: 100vw;
@@ -22,9 +5,9 @@ nav.mainNav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #000;
+    background-color: var(--back);
     padding: 20px;
-    border-bottom: 2px solid #555;
+    border-bottom: 2px solid var(--solid);
     position: fixed;
 }
 
@@ -35,7 +18,7 @@ div.logo {
 }
 
 p.fontLogo {
-    color: #fff;
+    color: var(--light);
     text-transform: uppercase;
     font-size: 30px;
 }
@@ -52,7 +35,7 @@ div.buttonBars {
 span.topBar, span.middleBar, span.bottomBar {
     display: block;
     height: 3px;
-    background-color: #f1f1f1;
+    background-color: var(--light);
     width: 30px;
     margin: 0px 4px 5px;
     border-radius: 10px;
@@ -87,7 +70,7 @@ div.menu {
     width: 100vw;
     height: calc(100vh - 60px);
     transition: left 1s ease;
-    background-color: #000;
+    background-color: var(--back);
 }
 
 ul.listMenu {
@@ -102,7 +85,7 @@ a.linkMenu {
     display: block;
     text-decoration: none;
     text-align: center;
-    color: #f1f1f1;
+    color: var(--light);
     padding: 20px 15px;
     font-size: 20px;
 }
@@ -126,23 +109,23 @@ div.imgContainer, div.textContainer {
 
 h1.titlePortfolio {
     font-size: 30px;
-    color: #fff;
+    color: var(--light);
     padding: 20px 0px;
 }
 
 p.subtitle {
     font-size: 20px;
-    color: #555;
+    color: var(--solid);
     padding: 20px 0px;
 }
 
 a.btnContact, button.btnContact {
     border: none;
     background: none;
-    color: #fff;
+    color: var(--light);
     font-size: 14px;
     text-transform: uppercase;
-    background-color: #016cbc;
+    background-color: var(--presence);
     padding: 15px;
     border-radius: 2px;
     margin-top: 15px;
@@ -164,7 +147,7 @@ section.profileContainer {
 
 h2.titlePortfolio {
     font-size: 24px;
-    color: #fff;
+    color: var(--light);
     margin: 20px;
 }
 
@@ -174,11 +157,11 @@ p.infoProfile {
     max-width: 450px;
     font-size: 16px;
     line-height: 20px;
-    color: #c2bcbc;
+    color: var(--text);
     padding: 25px;
     text-align: justify;
-    border-top: 8px solid #016cbc;
-    border-bottom: 8px solid #016cbc;
+    border-top: 8px solid var(--presence);
+    border-bottom: 8px solid var(--presence);
     border-radius: 8px;
     margin: 0px 10px 20px;
 }
@@ -199,7 +182,7 @@ img.tecImg {
 
 h3.tecTitle {
     font-size: 24px;
-    color: #fff;
+    color: var(--light);
     margin: 30px 10px;
 }
 
@@ -217,20 +200,20 @@ div.tecIcons1, div.tecIcons2 {
     align-items: center;
     justify-content: space-around;
     height: 200px;
-    border-top: 8px solid #016cbc;
+    border-top: 8px solid var(--presence);
     border-radius: 8px;
 }
 
 div.tecIcons2 {
     border-top: none;
-    border-bottom: 8px solid #016cbc;
+    border-bottom: 8px solid var(--presence);
     border-radius: 8px;
 }
 
 
 /* Mís habilidades. */
 section.skillsContainer, section.contactContainer, form.contactForm {
-    color: lightgray;
+    color: var(--light);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -262,47 +245,47 @@ div.languajes {
 }
 
 div.progressBar {
-    border: 1px solid lightgray;
-    border-radius: 2px;
+    height: 30px;
     background-color: #242426;
 }
 
 div#htmlBar, div#cssBar, div#jsBar, div#phpBar, div#mysqlBar, div#gitBar, div#bootBar, div#nodejsBar {
+    display: none;
     width: 0;
     height: 30px;
-    background-color: #016cbc;
+    background-color: var(--presence);
 }
 
 div#htmlBar {
-    animation: htmlBar 4s infinite;
+    animation: htmlBar 4s forwards;
 }
 
 div#cssBar {
-    animation: cssBar 4s infinite;
+    animation: cssBar 4s forwards;
 }
 
 div#jsBar {
-    animation: jsBar 4s infinite;
+    animation: jsBar 4s forwards;
 }
 
 div#phpBar {
-    animation: phpBar 4s infinite;
+    animation: phpBar 4s forwards;
 }
 
 div#mysqlBar {
-    animation: mysqlBar 4s infinite;
+    animation: mysqlBar 4s forwards;
 }
 
 div#gitBar {
-    animation: gitBar 4s infinite;
+    animation: gitBar 4s forwards;
 }
 
 div#bootBar {
-    animation: bootBar 4s infinite;
+    animation: bootBar 4s forwards;
 }
 
 div#nodejsBar {
-    animation: nodejsBar 4s infinite;
+    animation: nodejsBar 4s forwards;
 }
 
 
@@ -368,8 +351,8 @@ form.contactForm {
     width: 85%;
     align-items: center;
     padding: 30px 0px;
-    border-top: 8px solid #016cbc;
-    border-bottom: 8px solid #016cbc;
+    border-top: 8px solid var(--presence);
+    border-bottom: 8px solid var(--presence);
     border-radius: 8px;
 }
 
@@ -377,29 +360,35 @@ input.inputContact {
     width: 100%;
     height: 40px;
     border: none;
-    background-color: #242426;
-    margin-bottom: 30px;
+    background-color: var(--shadow);
     padding: 0px 15px;
-    color: #c2bcbc;
+    color: var(--text);
     text-transform: uppercase;
 }
 
-textarea.msgContact {
+textarea.inputContact {
     width: 100%;
     border: none;
-    background-color: #242426;
-    margin-bottom: 30px;
+    background-color: var(--shadow);
     padding: 15px;
-    color: #c2bcbc;
+    color: var(--text);
     text-transform: uppercase;
     font-size: 14px;
+}
+
+span.errorMsg {
+    width: 100%;
+    margin-bottom: 30px;
+    text-align: start;
+    text-transform: uppercase;
+    font-size: 11px;
 }
 
 
 /* Footer. */
 footer.networksContainer {
-    background-color: #242426;
-    color: lightgray;
+    background-color: var(--shadow);
+    color: var(--light);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -412,7 +401,7 @@ div.networks {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid var(--light);
 }
 
 div.logoFooter {
@@ -422,7 +411,7 @@ div.logoFooter {
 }
 
 p.fontLogoFooter {
-    color: lightgray;
+    color: var(--light);
     text-transform: uppercase;
     font-size: 30px;
     padding-bottom: 30px;
@@ -440,12 +429,13 @@ div.linksContainer {
 a.linkNetwork {
     outline: none;
     text-decoration: none;
-    color: lightgray;
+    color: var(--light);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    border: 1px solid lightgray;
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--light);
     border-radius: 50%;
 }
 
@@ -455,7 +445,6 @@ span.copy {
 }
 
 /* Medias querys. */
-
 @media (min-width: 992px){
 
 
@@ -479,7 +468,7 @@ span.copy {
         display: flex;
         align-items: center;
         justify-content: end;
-        border-bottom: 1px solid #555;
+        border-bottom: 1px solid var(--solid);
     }
     
     li.itemMenu {
@@ -489,12 +478,12 @@ span.copy {
     a.linkMenu {
         width: 100%;
         height: 100%;
-        color: lightgray;
+        color: var(--light);
     }
 
     a.linkMenu:hover {
         color: none;
-        color: #016cbc;
+        color: var(--presence);
     }
 
 
@@ -512,12 +501,20 @@ span.copy {
 
     h1.titlePortfolio {
         font-size: 54px;
-        color: #fff;
+        color: var(--light);
         padding: 20px 0px;
     }
 
     p.subtitle {
         font-size: 24px;
+    }
+
+    a.btnContact, button.btnContact {
+        color: var(--presence);
+        font-size: 14px;
+        text-transform: uppercase;
+        background-color: var(--back);
+        border: 1px solid var(--presence);
     }
     
     button.btnContact {
@@ -542,7 +539,7 @@ span.copy {
 
     h2.titlePortfolio {
         font-size: 30px;
-        color: #fff;
+        color: var(--light);
         margin: 30px;
     }
 
@@ -551,20 +548,19 @@ span.copy {
         max-width: 800px;
         font-size: 20px;
         line-height: 25px;
-        color: #c2bcbc;
+        color: var(--text);
         padding: 25px;
         text-align: justify;
-        border-top: 8px solid #016cbc;
-        border-bottom: 8px solid #016cbc;
+        border-top: 8px solid var(--presence);
+        border-bottom: 8px solid var(--presence);
         border-radius: 8px;
         margin: 0px 10px 10px;
     }
 
     a.btnContact:hover {
-        border: 1px solid #016cbc;
-        background: none;
-        color: #016cbc; 
-        padding: 14px;
+        color: var(--light);
+        background-color: var(--presence);
+        box-shadow: 0px 0px 10px var(--presence), 0px 0px 40px var(--presence), 0px 0px 80px var(--presence) ;
     }
 
 
@@ -607,10 +603,9 @@ span.copy {
     }
 
     button.btnContact:hover {
-        border: 1px solid #016cbc;
-        background: none;
-        color: #016cbc;
-        padding: 14px;
+        color: var(--light);
+        background-color: var(--presence);
+        box-shadow: 0px 0px 10px var(--presence), 0px 0px 40px var(--presence), 0px 0px 80px var(--presence) ;
     }
 
 
@@ -621,6 +616,6 @@ span.copy {
     }
 
     a.linkNetwork:hover {
-        background-color: #016cbc;
+        background-color: var(--presence);
     }
 }
