Agrego nuevas validaciones al contact form y un modal con mesaje de error

--- a/public/css/generales.css
+++ b/public/css/generales.css
@@ -14,7 +14,7 @@ html {
     --back: #000;
     --light: #fff;
     --error: #ff0000;
-    --done: #39ff14;
+    --done: #007b00;
     --presence: #016cbc;
     --shadow: #242426;
     --solid: #555;
