--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -338,13 +338,40 @@ div#nodejsBar {
     }
 }
 
+/* Proyectos. */
+section.projectsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 80px 0px;
+}
+
+h5.projectTitle {
+    color: var(--light);
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+img.imageProject {
+    width: 300px;
+}
+
+p.projectsDescription {
+    color: var(--light);
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    padding: 15px 0px;
+}
+
 /* Contactame. */
 section.contactContainer {
     padding: 80px 0px;
 }
 
-h5.contactTitle {
-    font-size: 24px;
+h6.contactTitle {
+    font-size: 28px;
 }
 
 form.contactForm {
@@ -509,11 +536,12 @@ a.linkNetwork {
     outline: none;
     text-decoration: none;
     color: var(--light);
+    font-size: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border: 1px solid var(--light);
     border-radius: 50%;
 }
