--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -353,6 +353,18 @@ h5.projectTitle {
     margin-bottom: 20px;
 }
 
+div.projectsLinks {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+div.link {
+    margin-bottom: 40px;
+}
+
 img.imageProject {
     width: 300px;
 }
@@ -696,6 +708,10 @@ span.copy {
         font-size: 32px;
     }
 
+    /* Proyectos. */
+    div.projectsLinks {
+        flex-direction: row;
+    }
 
     /* Contactame. */ 
     form.contactForm {
