--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -367,6 +367,7 @@ div.link {
 
 img.imageProject {
     width: 300px;
+    margin-top: 20px;
 }
 
 p.projectsDescription {
@@ -374,7 +375,7 @@ p.projectsDescription {
     text-align: center;
     text-transform: uppercase;
     font-size: 14px;
-    padding: 15px 0px;
+    margin-bottom: 5px;
 }
 
 /* Contactame. */
